--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,72 +7,68 @@ post_class: post-template
 ---
 
 <main class="content" role="main">
-    <article class="post">
-        <header class="post-header">
-            <h1 class="post-title">{{ page.title }}</h1>
-	</header>
-        <aside class="post-meta">
-            <p><time datetime="{{ post.date | date:"%Y-%m-%d" }}">{{ page.date | date_to_string }}</time>
-            {% if page.categories %}dans la catégorie&nbsp;{{ page.categories | category_links }}{% endif %}
-            {% if page.tags.size != 0 %}<br/>(tags:&nbsp;{{ page.tags | tag_links }}){% endif %}</p>
-            {% if site.author %}
-            <section class="author">
-                <header> <a href="{{ site.baseurl }}"> <img class="profile" src="/assets/images/me.jpg" alt="Author's profile picture"></a></header>
-                <article><h4>{{ site.author.name }}</h4><p>{{ site.author.bio }}</p></article>
-            </section>
-            {% endif %}
-            <section class="share">
-                <h4>Share this post</h4>
-                <a class="icon-twitter" href="http://twitter.com/share?text={{page.title}}&amp;url=http://{{site.url}}{{ page.url }}"
-                    onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
-                    <span class="hidden">Twitter</span>
-                </a>
-                <a class="icon-facebook" href="https://www.facebook.com/sharer/sharer.php?u=http://{{site.url}}{{page.url}}"
-                    onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
-                    <span class="hidden">Facebook</span>
-                </a>
-                <a class="icon-google-plus" href="https://plus.google.com/share?url=http://{{site.url}}{{page.url}}"
-                    onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
-                    <span class="hidden">Google+</span>
-                </a>
-            </section>
-        </aside>
-        <section class="post-content">
-            {{content}}
+  <article class="post">
+    <header class="post-header">
+      <h1 class="post-title">{{ page.title }}</h1>
+    </header>
+    <aside class="post-meta">
+      <p><time datetime="{{ post.date | date:"%Y-%m-%d" }}">{{ page.date | date_to_string }}</time>
+         {% if page.categories %}dans la catégorie&nbsp;{{ page.categories | category_links }}{% endif %}
+         {% if page.tags.size != 0 %}<br/>(tags:&nbsp;{{ page.tags | tag_links }}){% endif %}</p>
+{% if site.author %}
+      <section class="author">
+        <header> <a href="{{ site.baseurl }}"> <img class="profile" src="/assets/images/me.jpg" alt="Author's profile picture"></a></header>
+        <article><h4>{{ site.author.name }}</h4><p>{{ site.author.bio }}</p></article>
+      </section>
+{% endif %}
+      <section class="share">
+        <h4>Share this post</h4>
+        <a class="icon-twitter" href="http://twitter.com/share?text={{page.title}}&amp;url=http://{{site.url}}{{ page.url }}"
+           onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
+          <span class="hidden">Twitter</span>
+        </a>
+        <a class="icon-facebook" href="https://www.facebook.com/sharer/sharer.php?u=http://{{site.url}}{{page.url}}"
+           onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
+          <span class="hidden">Facebook</span>
+        </a>
+        <a class="icon-google-plus" href="https://plus.google.com/share?url=http://{{site.url}}{{page.url}}"
+           onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
+          <span class="hidden">Google+</span>
+        </a>
+      </section>
+    </aside>
+    <section class="post-content">
+      {{content}}
+    </section>
+    <footer class="post-footer">
+{% if site.related_posts.size != 0 %}    <section class="archive">
+      <h5>Related posts</h5>
+      <ul>
+        {% for post in site.related_posts limit:5 %}        <li><span>{{ post.date | date_to_string }}</span>  <a href="{{ post.url }}">{{ post.title }}</a></li>{% endfor %} 
+      </ul>
+    </section>{% endif %}
+{% if page.archive %}    <section class="archive">
+      <h5>Archive</h5>
+      <ul>
+        {% for post in site.posts %}        <li><span>{{ post.date | date_to_string }}</span>  <a href="{{ post.url }}">{{ post.title }}</a></li>{% endfor %}	
+      </ul>
+    </section>{% endif %}
+      {% if page.disqus %}
+        <section class="disqus">
+          <div id="disqus_thread"></div>
+          <script type="text/javascript">
+            var disqus_shortname = ''; 
+            var disqus_developer = 0; // developer mode is on
+            (function() {
+              var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+              dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+              (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+            })();
+          </script>
+          <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+          <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
         </section>
-
-        {% if page.archive %}
-        <section class="archive">
-        	<h5>Archive</h5>
-    		<ul>
-    			{% for post in site.posts %}
-    				<li><span>{{ post.date | date_to_string }}</span>  <a href="{{ post.url }}">{{ post.title }}</a></li>
-    			{% endfor %}	
-    		</ul>
-        </section>
-        {% endif %}
-
-        <footer class="post-footer">
-            {% if page.disqus %}
-            <section class="disqus">
-            	<div id="disqus_thread"></div>
-            	<script type="text/javascript">
-
-            	    var disqus_shortname = ''; 
-            		var disqus_developer = 0; // developer mode is on
-            	    (function() {
-            	        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-            	        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-            	        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-            	    })();
-            	</script>
-            	<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-            	<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-            </section>
-            {% endif %}
-        	
-        </footer>
-
+{% endif %}        	
+      </footer>
     </article>
-
 </main>
