--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
     <div class="vertical">
       <div class="site-head-content">
  {% if page.logo %}        <a class="blog-logo" href="{{ site.baseurl }}"><img src="{{ page.logo }}" alt="Blog Logo" /></a>{% endif %}
-        <h1 class="blog-title">{{ site.name }}</h1>
+        <h1 class="blog-title"><a href="/" title="home">{{ site.name }}</a></h1>
         <p class="blog-description">{{ site.description }}</p>
       </div>
     </div>
