--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,7 +38,28 @@ post_class: post-template
       </section>
     </aside>
     <section class="post-content">
-      {{content}}
+{% if page.lang == 'fr' %}
+{% capture compress %}
+{% assign temp1 = content | split: '<pre>' %}
+{% for temp2 in temp1 %}
+{% assign temp3 = temp2 | split: '</pre>' %}
+{% if temp3.size == 2 %}
+<pre>{{ temp3.first | newline_to_br }}</pre>
+{% endif %}
+{% assign t = temp3.last %}
+{% assign t = t | replace: '“' , '«&#160;' %}
+{% assign t = t | replace: '”' , '&#160;»' %}
+{% assign t = t | replace: ' :',       '&#160;:' %}
+{% assign t = t | replace: ' %',       '&#160;%' %}
+{% assign t = t | replace: ' ;', '<span style="white-space:nowrap">&thinsp;</span>;' %}
+{% assign t = t | replace: ' !', '<span style="white-space:nowrap">&thinsp;</span>!' %}
+{% assign t = t | replace: ' ?', '<span style="white-space:nowrap">&thinsp;</span>?' %}
+{{ t | split: ' ' | join: ' ' }}
+{% endfor %}
+{% endcapture %}{{ compress | strip_newlines }}
+{% else %}
+{{content}}
+{% endif%}
     </section>
     <footer class="post-footer">
 {% if site.related_posts.size != 0 %}    <section class="archive">
