--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,8 @@
   - /_assets/css/normalize.css
   - /_assets/css/screen.css
   - /_assets/css/syntax.css
-  - /_assets/css/main.css{% endcss_asset_tag %}
+  - /_assets/css/main.css
+  - /_assets/css/blog.css{% endcss_asset_tag %}
   <link rel="alternate" type="application/atom+xml" title="Feed for category: {{ page.categories | first }}" href="{% page_feed_url %}" />
 {% if page.excerpt %}
   <!-- Twitter cards -->
