--- a/_assets/css/blog.css
+++ b/_assets/css/blog.css
@@ -8,3 +8,4 @@ h1 a,h2 a,h3 a,h4 a,h5 a,h6 a{color: res;}
 .site-head a {color:#eee;}
 .content-post time{background-color:red;color: white;}
 .post-meta a{color:red;}
+img.profile{box-shadow: 0 0 5px 1px red;}
