--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,30 +36,21 @@ post_class: post-template
           <span class="hidden">Google+</span>
         </a>
       </section>
+      <section class='alternate-version'>
+      {% if page.name %}
+        {% assign altposts=site.posts | where:"name",page.name | where_not:"lang",page.lang %}
+        {% for altpost in altposts %}
+          {% if page.lang == "fr" %}
+            <p lang='{{ altpost.lang }}'>This page is also available in <a href='{{ altpost.url }}' lang='{{ altpost.lang }}'>english</a></p>
+          {% else %}
+            <p lang='{{ altpost.lang }}'>Cette page est également disponible en <a href='{{ altpost.url }}' lang='{{ altpost.lang }}'>français</a></p>
+          {% endif %}
+        {% endfor %}
+      {% endif %}
+      </section>
     </aside>
     <section class="post-content">
-{% if page.lang == 'fr' %}
-{% capture compress %}
-{% assign temp1 = content | split: '<pre>' %}
-{% for temp2 in temp1 %}
-{% assign temp3 = temp2 | split: '</pre>' %}
-{% if temp3.size == 2 %}
-<pre>{{ temp3.first | newline_to_br }}</pre>
-{% endif %}
-{% assign t = temp3.last %}
-{% assign t = t | replace: '“' , '«&#160;' %}
-{% assign t = t | replace: '”' , '&#160;»' %}
-{% assign t = t | replace: ' :',       '&#160;:' %}
-{% assign t = t | replace: ' %',       '&#160;%' %}
-{% assign t = t | replace: ' ;', '<span style="white-space:nowrap">&thinsp;</span>;' %}
-{% assign t = t | replace: ' !', '<span style="white-space:nowrap">&thinsp;</span>!' %}
-{% assign t = t | replace: ' ?', '<span style="white-space:nowrap">&thinsp;</span>?' %}
-{{ t | split: ' ' | join: ' ' }}
-{% endfor %}
-{% endcapture %}{{ compress | strip_newlines }}
-{% else %}
-{{content}}
-{% endif%}
+    {% include post_content_with_fr_typo.html %}
     </section>
     <footer class="post-footer">
 {% if site.related_posts.size != 0 %}    <section class="archive">
