Update theme. Add prefetch

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
   <meta name="author" content="{{ site.author.name }}" />
   <meta name="copyright" content="All content copyright {{ site.author.name }}. All rights reserved." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="prefetch" href="/assets/images/background-header.jpg">
   {% css_asset_tag global %}
   - /_assets/css/normalize.css
   - /_assets/css/screen.css
