--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,10 +3,8 @@
 <head>   
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <!-- meta name="googlebot" content="{% if page.meta.robots %}{{ page.meta.robots | join: ',' }}{% else %}index,follow{% endif %}" />
-  <meta name="robots" content="{% if page.meta.robots %}{{ page.meta.robots | join: ',' }}{% else %}index,follow{% endif %}" / -->
-  <meta name="googlebot" content="index,follow" />
-  <meta name="robots" content="index,follow" />
+  <meta name="googlebot" content="{% if page.meta.robots %}{{ page.meta.robots | join: ',' }}{% else %}index,follow{% endif %}" />
+  <meta name="robots" content="{% if page.meta.robots %}{{ page.meta.robots | join: ',' }}{% else %}index,follow{% endif %}" />
 
   <meta name="HandheldFriendly" content="True" />
   <meta name="MobileOptimized" content="320" />
