Update configuration & theme. Remove strip plugin. Breaks pre/code

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,4 @@
-{% strip %}<!DOCTYPE html>
+<!DOCTYPE html>
 <html {%if page.post_class != false %}lang="{% if page.lang %}{{ page.lang }}{% else %}fr{% endif %}"{% endif %}>
 <head>   
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -55,4 +55,4 @@
     </div>
   </footer>
 </body>
-</html>{% endstrip %}
+</html>
